YES-109 fixed squished title when browser width is small
 - post title now overflows insteads of looking squished

--- a/front-end/src/components/theZone/TheZonePost.css
+++ b/front-end/src/components/theZone/TheZonePost.css
@@ -1,29 +1,39 @@
 .title {
-  font-size: 40px;
+  font-size: 35px;
+  white-space: nowrap;
+}
+.titleContainer {
+  overflow:hidden;
 }
 .postTitle {
-    width: calc(100% - 10px);
-    margin: 2px;
+  width: calc(100% - 10px);
+  margin: 2px;
 }
+
 .post {
   border: 1px solid black;
   margin: 5px;
 }
+
 .postHeader {
   border: 1px solid black;
   height: 100px;
 }
+
 .percentageText {
   color: #61892F;
-  font-size:40px;
+  font-size: 40px;
 }
+
 .comment {
   border: 1px solid black;
 }
+
 .agree {
   float: right;
   margin-right: 10px;
 }
+
 .percentageDisplay {
   float: right;
 }
